--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/" href="/src/assets/memoji.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="iRR1IBp8DzCTmyoNXMT2rBKXkzx33lpv0FX1eIGlzFg" />
+     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Eric Alfred" />
+    <meta name="twitter:description" content="A passionate full-stack developer specialized in crafting scalable website and applications, I am committed to delivering innovative solution and pushing the boundaries of what is possible in the realm of software development!!!" />
+    <meta name="twitter:image" content="https://eric-alfred.vercel.app/src/assets/memoji.jpeg" />
+    <meta name="twitter:url" content="https://eric-alfred.vercel.app" />
+    
+    <meta property="og:title" content="Chukwunonso prosper">
+    <meta property="og:description" content="A seasoned full-stack developer specialized in crafting scalable website and applications, i am committed to delivering innovative solution and pushing the boundaries of what is possible in the realm of web and application development!!!" />
+    <meta property="og:image" content="https://chukwunonsoprosper.vercel.app/Capture.PNG" />
+    <meta property="og:url" content="https://chukwunonsoprosper.vercel.app" />
+    <meta property="og:type" content="website" />
     <title>Eric || Passionate Web Developer</title>
   </head>
   <body>
