--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     
     <meta property="og:title" content="Eric Alfred">
     <meta property="og:description" content="A passionate full-stack developer specialized in crafting scalable website and applications, I am committed to delivering innovative solution and pushing the boundaries of what is possible in the realm of software development!" />
-    <meta property="og:image" content="https://chukwunonsoprosper.vercel.app/Capture.PNG" />
-    <meta property="og:url" content="https://chukwunonsoprosper.vercel.app" />
+    <meta property="og:image" content="https://eric-alfred.vercel.app/src/assets/memoji.jpeg" />
+    <meta property="og:url" content="https://eric-alfred.vercel.app" />
     <meta property="og:type" content="website" />
     <title>Eric || Passionate Web Developer</title>
   </head>
