SEO and css changes

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
      <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Eric Alfred" />
     <meta name="twitter:description" content="A passionate full-stack developer specialized in crafting scalable website and applications, I am committed to delivering innovative solution and pushing the boundaries of what is possible in the realm of software development!" />
-    <meta name="twitter:image" content="https://eric-alfred.vercel.app/src/assets/memoji.jpeg" />
+    <meta name="twitter:image" content="/src/assets/memoji.jpeg" />
     <meta name="twitter:url" content="https://eric-alfred.vercel.app" />
     
     <meta property="og:title" content="Eric Alfred">
     <meta property="og:description" content="A passionate full-stack developer specialized in crafting scalable website and applications, I am committed to delivering innovative solution and pushing the boundaries of what is possible in the realm of software development!" />
-    <meta property="og:image" content="https://eric-alfred.vercel.app/src/assets/memoji.jpeg" />
+    <meta property="og:image" content="/src/assets/memoji.jpeg" />
     <meta property="og:url" content="https://eric-alfred.vercel.app" />
     <meta property="og:type" content="website" />
     <title>Eric || Passionate Web Developer</title>
